--- a/TextEditor/TextEditor/MainWindow.xaml
+++ b/TextEditor/TextEditor/MainWindow.xaml
@@ -7,16 +7,20 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition MaxWidth="50" />
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <TextBlock Name="LineNumber" Grid.Column="0" Text="1"
-                   Foreground="#FF865FC5" Background="#FF1D1D1F"
-                   TextAlignment="Center"/>
-        
-        <RichTextBox Name="MainTextBox" Grid.Column ="1"
-                     Background="#FF1E1E1E" Foreground="White" BorderBrush="#FF1E1E1E"
-                     AcceptsTab="True"  />
+        <ScrollViewer>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition MaxWidth="50" />
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Name="LineNumber" Grid.Column="0" Text="1"
+                       Foreground="#FF865FC5" Background="#FF1D1D1F"
+                       TextAlignment="Center"/>
+
+                <RichTextBox Name="MainTextBox" Grid.Column ="1"
+                         Background="#FF1E1E1E" Foreground="White" BorderBrush="#FF1E1E1E"
+                         AcceptsTab="True"  />
+            </Grid>
+        </ScrollViewer>
     </Grid>
 </Window>
