Added Preview Key Down handler to MainTextBox to handle line number updates. Added Stubs for AddLineNum and RemoveLineNum.

--- a/TextEditor/TextEditor/MainWindow.xaml
+++ b/TextEditor/TextEditor/MainWindow.xaml
@@ -28,7 +28,7 @@
 
                 <RichTextBox Name="MainTextBox" Grid.Column="1"
                          Background="#FF1E1E1E" Foreground="White" BorderBrush="#FF1E1E1E"
-                         AcceptsTab="True" HorizontalScrollBarVisibility="Visible"  />
+                         AcceptsTab="True" HorizontalScrollBarVisibility="Visible" PreviewKeyDown="MainTextBox_PreviewKeyDown"  />
             </Grid>
         </ScrollViewer>
     </Grid>
