--- a/TextEditor/TextEditor/MainWindow.xaml
+++ b/TextEditor/TextEditor/MainWindow.xaml
@@ -6,6 +6,9 @@
         xmlns:local="clr-namespace:TextEditor"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.Resources>
+        <ResourceDictionary Source="TemplateDesigns.xaml"/>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
@@ -16,7 +19,7 @@
             <MenuItem Header="_Edit"/>
             <MenuItem Header="_View"/>
         </Menu>
-        <ScrollViewer Grid.Row="1" Margin="0">
+        <ScrollViewer Grid.Row="1" Margin="0" Style="{StaticResource ScrollViewerStyle}">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition MaxWidth="50" />
